Polish 0cfbf60: fix a test for Java 8 compatibility